# LPHaskell-automate

./: .travis.yml  CHANGELOG.md  README.md  actividad01.cabal
app/: A01aa.hs  A01ba.hs  A01cb.hs  A01js.hs  A01nl.hs  A01vr.hs  Main.hs  TestM.hs
test/: Main.hs
